# thief_sense_demo

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/maps/: main_level.map  main_level.nav
assets/maps/autosave/: main_level.1.map
assets/models/: license.md
src/: animation.rs  asset_tracking.rs  audio.rs  main.rs  movement.rs  rand_timer.rs
src/demo/: click.rs  level.rs  link_head.rs  mod.rs  npc.rs  path_corner.rs  player.rs  target.rs  target_after.rs
src/demo/npc/: animation.rs  look.rs  mod.rs  movement.rs  sense.rs  view_cone.rs
src/demo/player/: animation.rs  mod.rs  movement.rs
src/dev_tools/: assert_preloading.rs  mod.rs
src/screens/: gameplay.rs  mod.rs  splash.rs
src/theme/: interaction.rs  palette.rs  widget.rs
